Header/Footer & home page updates.  Fixed column alignment and separation issues.  Styled headers, tabs, and content blocks.

--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -21,8 +21,8 @@
 	  background-color: $hokie-orange;
 	  border-color: $hokie-orange;
 	  color: white;
-	  -ms-transform: scale(1.05); /* IE 9 */
-	  -webkit-transform: scale(1.05); /* Safari */
-	  transform: scale(1.05);
+	  -ms-transform: scale(1.02); /* IE 9 */
+	  -webkit-transform: scale(1.02); /* Safari */
+	  transform: scale(1.02);
 	}
 }
