--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -4,3 +4,4 @@ $hokie-maroon: #660000;
 $hokie-orange: #ff6600;
 $hokie-off-orange: #FE5B00;
 $hokie-grey:   #333333;
+$background: #F3F3F3;
